// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lock file read templates should work 1`] = `
Array [
  Object {
    "name": "@aiou/ts-lib-template",
  },
]
`;

exports[`lock file update preset should work 1`] = `
Object {
  "presets": Object {
    "neo": Object {
      "templates": Array [
        Object {
          "name": "@aiou/ts-lib-template",
        },
      ],
    },
  },
}
`;

exports[`lock file update templates should work 1`] = `
Object {
  "presets": Object {
    "neo": Object {
      "templates": Array [
        Object {
          "name": "@aiou/ts-lib-template",
        },
      ],
    },
  },
  "templates": Object {
    "/@aiou/ts-lib-template/0.5.0": Object {},
  },
}
`;
